add full mobile responsive

--- a/museums.html
+++ b/museums.html
@@ -70,7 +70,7 @@
                 <p>Musée d'Orsay in Paris is a must-visit for art lovers and travelers alike. It's famous for its impressive collection of Impressionist and post-Impressionist art, making it one of the largest in the world. Housed in a stunning former railway station on the Seine, the museum is just as beautiful on the outside as it is on the inside. Don't miss the famous clock face, which is part of the museum's exhibition. For an in-depth experience, you might want to join a private or group tour. Visit in the morning to beat the crowds and enjoy a quieter museum experience. – Tripadvisor</p>
             </div>
         </div>
-        <div class="buy-tickets-button">
+        <div class="buy-tickets-button buy-tickets-button-under-text">
             <a href="https://www.tripadvisor.com/Attraction_Review-g187147-d188150-Reviews-Musee_d_Orsay-Paris_Ile_de_France.html" target="_blank"><button><p>Buy Tickets</p></button></a>
         </div>
     </div>
@@ -100,7 +100,7 @@
                 <p>Located in this 18th-century hotel (Hotel Biron), Musee Rodin holds an impressive collection of works by this famous French sculptor and his circle as Camille Claudel. The museum also features an exquisit garden and a temporary exhibition hall.</p>
             </div>
         </div>
-        <div class="buy-tickets-button">
+        <div class="buy-tickets-button buy-tickets-button-under-text">
             <a href="https://www.tripadvisor.com/Attraction_Review-g187147-d188149-Reviews-Musee_Rodin-Paris_Ile_de_France.html" target="_blank"><button><p>Buy Tickets</p></button></a>
         </div>
     </div>
@@ -130,7 +130,7 @@
                 <p>Built for the 1900 Universal Exhibition and completely renovated in 2005, the Petit Palais offers an artistic panorama from antiquity through the 20th century: ancient and medieval collections, precious art objects from the French and Italian Renaissance, Flemish and Dutch paintings (Dutuit bequest), icons (Cabal bequest), 18th century work (Tuck donation), French paintings and sculptures from the 19th century - Courbet, Carpeaux, Cezanne, Vuillard - and Art Nouveau creations.</p>
             </div>
         </div>
-        <div class="buy-tickets-button">
+        <div class="buy-tickets-button buy-tickets-button-under-text">
             <a href="https://www.tripadvisor.com/Attraction_Review-g187147-d232167-Reviews-Petit_Palais-Paris_Ile_de_France.html" target="_blank"><button><p>Buy Tickets</p></button></a>
         </div>
     </div>
@@ -160,7 +160,7 @@
                 <p>The Pavillons de Bercy-Musée des Arts Forains house one of the largest collections of entertainment and fairground art's objects. They are located in ancient wine warehouses built by a Gustave Eiffel apprentice in the end of the 19th century. Discover the site and its four venues: Théatre du Merveilleux (Thetre of Marvels), Salons Vénitiens (Venetian Rooms), Théâtre de Verdure (Vegetal outdoor area) and the Musée des Arts Forains (Museum àof Fairground Art), all displayed with themes such as Cabinet of curiosities, Venetian carnival, Extraordinary gardens and funfairs of the Belle Epoque (End of the 19th century). This private museum is opende throughout the year, only by apointement in order to experiment the spirit of the place in a lively and participative tour. The guides takes the visitor on an out of time journey, enables them to ride carousels and listen to an automaton show. The Pavillons de Bercy are opened to visit throughout the year only by appointment. And exceptionnally without booking twice a year during the European Heritage Days and Festival du Merveilleux. All the venues can also be rented for private events.</p>
             </div>
         </div>
-        <div class="buy-tickets-button">
+        <div class="buy-tickets-button buy-tickets-button-under-text">
             <a href="https://www.tripadvisor.com/Attraction_Review-g187147-d2507208-Reviews-Les_Pavillons_de_Bercy_Musee_Des_Arts_Forains-Paris_Ile_de_France.html" target="_blank"><button><p>Buy Tickets</p></button></a>
         </div>
     </div>
@@ -190,15 +190,15 @@
                 <p>The biggest collection of moderne and contemporary art in Europe, one of the finest in the world ! . A building that is an icon of 20th century architecture. . Cutting-edge events, exhibitions that can't be missed. . The most wonderful view of Paris.</p>
             </div>
         </div>
-        <div class="buy-tickets-button">
+        <div class="buy-tickets-button buy-tickets-button-under-text">
             <a href="https://www.tripadvisor.com/Attraction_Review-g187147-d314440-Reviews-Centre_Pompidou-Paris_Ile_de_France.html" target="_blank"><button><p>Buy Tickets</p></button></a>
         </div>
     </div>
 
-    <div class="footer">
+    <div class="footer footer-museums">
         <div class="upper-footer">
             <div><p>Subscribe to our Newsletter and we will send you <br> information about our new products and trends.</p></div>
-            <div>
+            <div class="div-button">
                 <a href="#">
                     <button>
                         <span>Subscribe</span>
