--- a/reviews.html
+++ b/reviews.html
@@ -72,10 +72,10 @@
         </div>
     </div>
 
-    <div class="footer">
+    <div class="footer footer-reviews">
         <div class="upper-footer">
             <div><p>Subscribe to our Newsletter and we will send you <br> information about our new products and trends.</p></div>
-            <div>
+            <div class="div-button">
                 <a href="#">
                     <button>
                         <span>Subscribe</span>
