--- a/aboutProject.html
+++ b/aboutProject.html
@@ -51,13 +51,15 @@
             <p>This travel project presents an immersive journey through the heart of Paris, one of the most iconic and culturally rich cities in the world. The project highlights must-see landmarks such as the Eiffel Tower, Notre-Dame Cathedral, and the Louvre Museum, while also exploring the charm of Parisian neighborhoods like Montmartre and Le Marais. In addition to sightseeing, the project delves into the local culture, from sampling traditional French cuisine and pastries to experiencing the city’s unique art and fashion scene. The goal of this project is to provide a comprehensive guide to discovering Paris, blending historical insights, personal experiences, and practical travel tips for future visitors.</p>
         </div>
         <div class="about-map">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d83992.85361506998!2d2.260173443261721!3d48.86246881128475!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47e66e1f06e2b70f%3A0x40b82c3688c9460!2z0J_QsNGA0LjQtiwg0KTRgNCw0L3RhtC40Y8!5e0!3m2!1sru!2s!4v1752137811023!5m2!1sru!2s" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>        </div>
+            <iframe class="laptop-map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d83992.85361506998!2d2.260173443261721!3d48.86246881128475!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47e66e1f06e2b70f%3A0x40b82c3688c9460!2z0J_QsNGA0LjQtiwg0KTRgNCw0L3RhtC40Y8!5e0!3m2!1sru!2s!4v1752137811023!5m2!1sru!2s" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <iframe  class="mobile-map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d83991.3374279142!2d2.2625767025390746!3d48.863372248334514!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47e66e1f06e2b70f%3A0x40b82c3688c9460!2z0J_QsNGA0LjQtiwg0KTRgNCw0L3RhtC40Y8!5e0!3m2!1sru!2s!4v1752566153883!5m2!1sru!2s" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
     </div>
 
     <div class="footer">
         <div class="upper-footer">
             <div><p>Subscribe to our Newsletter and we will send you <br> information about our new products and trends.</p></div>
-            <div>
+            <div class="div-button">
                 <a href="#">
                     <button>
                         <span>Subscribe</span>
