--- a/tours.html
+++ b/tours.html
@@ -137,7 +137,7 @@
     <div class="footer">
         <div class="upper-footer">
             <div><p>Subscribe to our Newsletter and we will send you <br> information about our new products and trends.</p></div>
-            <div>
+            <div class="div-button">
                 <a href="#">
                     <button>
                         <span>Subscribe</span>
